--- a/settings.html
+++ b/settings.html
@@ -145,13 +145,10 @@
                         <span class="toggle-slider"></span>
                     </label>
                 </div>
-            </div>
-            
-            <div class="settings-subsection">
-                <h2 class="subsection-title">Privacy</h2>
+
                 <div class="settings-options">
                     <label class="setting-item">
-                        <span class="setting-label">Location Services</span>
+                        <span class="setting-label">Privacy - Location Services</span>
                         <div class="toggle-switch">
                             <input type="checkbox" checked data-settings-location>
                             <span class="toggle-slider"></span>
@@ -159,6 +156,10 @@
                     </label>
                 </div>
             </div>
+            
+            <div class="settings-subsection">
+                <h2 class="subsection-title">Privacy</h2>
+                    </div>
 
             <div class="settings-subsection owner-only">
                 <h2 class="subsection-title">Owner Only Settings</h2>
