--- a/settings.html
+++ b/settings.html
@@ -146,20 +146,21 @@
                     </label>
                 </div>
 
-                <div class="settings-options">
-                    <label class="setting-item">
-                        <span class="setting-label">Privacy - Location Services</span>
-                        <div class="toggle-switch">
-                            <input type="checkbox" checked data-settings-location>
-                            <span class="toggle-slider"></span>
-                        </div>
+                <div class="setting-card">
+                    <div class="setting-label">
+                        <h3 class="setting-title">Privacy - Location Services</h3>
+                        <p class="setting-description">Control location services for weather updates</p>
+                    </div>
+                    <label for="privacyLocationToggle" class="toggle-switch" aria-label="Toggle privacy location services">
+                        <input type="checkbox" checked data-settings-location id="privacyLocationToggle">
+                        <span class="toggle-slider"></span>
                     </label>
                 </div>
             </div>
             
             <div class="settings-subsection">
                 <h2 class="subsection-title">Privacy</h2>
-                    </div>
+            </div>
 
             <div class="settings-subsection owner-only">
                 <h2 class="subsection-title">Owner Only Settings</h2>
