--- a/settings.html
+++ b/settings.html
@@ -102,7 +102,7 @@
                         <p class="setting-description">Choose your preferred temperature unit</p>
                     </div>
                     <select class="select-input" data-settings-temp>
-                        <option value="celsius" style="color: green;">Celsius (°C)</option>
+                        <option value="celsius">Celsius (°C)</option>
                         <option value="fahrenheit">Fahrenheit (°F)</option>
                         <option value="kelvin">Kelvin (K)</option>
                     </select>
