--- a/weather.html
+++ b/weather.html
@@ -45,12 +45,10 @@
                     <span class="span">Settings</span>
                 </button>
 
-                <button class="btn-primary has-state" data-settings-btn onclick="window.location.href='index.html';">
+                <button class="btn-primary has-state" onclick="window.location.href='index.html';">
                     <span class="m-icon material-icons">home</span>
                     <span class="span">Home</span>
                 </button>
-
-
 
                 <button class="icon-btn has-state" aria-label="open search" data-search-toggler>
                     <span class="m-icon">search</span>
