--- a/weather.html
+++ b/weather.html
@@ -50,8 +50,6 @@
                     <span class="span">Home</span>
                 </button>
 
-
-
                 <button class="icon-btn has-state" aria-label="open search" data-search-toggler>
                     <span class="m-icon">search</span>
                 </button>
@@ -108,6 +106,15 @@
                         <option value="hpa">Hectopascals (hPa)</option>
                         <option value="inhg">Inches of Mercury (inHg)</option>
                         <option value="mmhg">Millimeters of Mercury (mmHg)</option>
+                    </select>
+                </div>
+
+                <!-- Distance Units -->
+                <div class="settings-section">
+                    <h3 class="title-3">Distance</h3>
+                    <select class="settings-select" data-settings-distance>
+                        <option value="km">Kilometers (km)</option>
+                        <option value="miles">Miles (mi)</option>
                     </select>
                 </div>
 
