--- a/weather.html
+++ b/weather.html
@@ -174,4 +174,14 @@
         </a>
     </section>
 </body>
+    <script src="common.js"></script>
+    <script src="globalSettings.js"></script>
+    <script src="script.js"></script>
+    <script src="ai-features.js"></script>
+    <script src="settings.js"></script>
+    <script src="events.js"></script>
+    <script src="version.js"></script>
+    <script src="device.js"></script>
+    <script src="creatorshoutouts.js"></script>
+    <script src="business-hours.js"></script>
 </html>
