--- a/weather.html
+++ b/weather.html
@@ -109,6 +109,36 @@
                     </select>
                 </div>
 
+                <!-- Distance Units -->
+                <div class="settings-section">
+                    <h3 class="title-3">Distance</h3>
+                    <select class="settings-select" data-settings-distance>
+                        <option value="km">Kilometers (km)</option>
+                        <option value="miles">Miles (mi)</option>
+                    </select>
+                </div>
+
+                <!-- Display Settings -->
+                <div class="settings-section">
+                    <h3 class="title-3">Display</h3>
+                    <div class="settings-options">
+                        <label class="setting-item">
+                            <span class="setting-label">Dark Mode</span>
+                            <div class="toggle-switch">
+                                <input type="checkbox" data-settings-theme>
+                                <span class="toggle-slider"></span>
+                            </div>
+                        </label>
+                        <label class="setting-item">
+                            <span class="setting-label">24-hour Time</span>
+                            <div class="toggle-switch">
+                                <input type="checkbox" data-settings-time>
+                                <span class="toggle-slider"></span>
+                            </div>
+                        </label>
+                    </div>
+                </div>
+
                 <!-- Privacy Settings -->
                 <div class="settings-section">
                     <h3 class="title-3">Privacy</h3>
