--- a/weather.html
+++ b/weather.html
@@ -26,8 +26,13 @@
             </a>
             <div class="search-view" data-search-view>
                 <div class="search-wrapper">
-                    <input type="search" name="search" class="search-field" placeholder="Search city or zip code..." autocomplete="off" data-search-field>
-                    <span class="m-icon leading-icon">search</span>
+                    <input type="search" 
+                           name="search" 
+                           class="search-field" 
+                           placeholder="Search city or ZIP code..." 
+                           autocomplete="off" 
+                           data-search-field>
+                    <span class="m-icon">search</span>
                     <button class="icon-btn leading-icon has-state" aria-label="close search" data-search-toggler>
                         <span class="m-icon">arrow_back</span>
                     </button>
