--- a/weather.html
+++ b/weather.html
@@ -114,6 +114,20 @@
                     </select>
                 </div>
 
+                <!-- Display Settings -->
+                <div class="settings-section">
+                    <h3 class="title-3">Display</h3>
+                    <div class="settings-options">
+                        <label class="setting-item">
+                            <span class="setting-label">24-hour Time</span>
+                            <div class="toggle-switch">
+                                <input type="checkbox" data-settings-time>
+                                <span class="toggle-slider"></span>
+                            </div>
+                        </label>
+                    </div>
+                </div>
+
                 <!-- Privacy Settings -->
                 <div class="settings-section">
                     <h3 class="title-3">Privacy</h3>
