--- a/weather.html
+++ b/weather.html
@@ -108,11 +108,14 @@
                 <div class="settings-section">
                     <h3 class="title-3">Pressure</h3>
                     <select class="settings-select" data-settings-pressure>
-                        <option value="hpa">Hectopascals (hPa)</option>
+                        <option value="mbar">Millibars (mbar)</option>
                         <option value="inhg">Inches of Mercury (inHg)</option>
                         <option value="mmhg">Millimeters of Mercury (mmHg)</option>
+                        <option value="hpa">Hectopascals (hPa)</option>
+                        <option value="kpa">Kilopascals (kPa)</option>
                     </select>
                 </div>
+
 
                 <!-- Display Settings -->
                 <div class="settings-section">
