--- a/weather.html
+++ b/weather.html
@@ -29,7 +29,7 @@
                     <input type="search" 
                            name="search" 
                            class="search-field" 
-                           placeholder="Search city or ZIP code..." 
+                           placeholder="Search city..." 
                            autocomplete="off" 
                            data-search-field>
                     <span class="m-icon">search</span>
