--- a/weather.html
+++ b/weather.html
@@ -22,7 +22,7 @@
     <header class="header">
         <div class="container">
             <a href="" class="logo">
-                <img src="assest/images/logo.svg" alt="logo">
+                <img src="assest/images/logo.png" alt="logo">
             </a>
             <div class="search-view" data-search-view>
                 <div class="search-wrapper">
