--- a/weather.html
+++ b/weather.html
@@ -131,20 +131,20 @@
                 </div>
 
                 <!-- Modified Privacy Settings -->
-                <div class="settings-section">
-                    <h3 class="title-3">Privacy</h3>
-                    <div class="settings-options">
-                        <label class="setting-item">
-                            <span class="setting-label">Location Services</span>
-                            <div class="toggle-switch">
-                                <input type="checkbox" 
-                                       id="location-toggle" 
-                                       data-settings-location 
-                                       checked>
-                                <span class="toggle-slider"></span>
-                            </div>
-                        </label>
-                    </div>
+               <div class="settings-section">
+                <h3 class="title-3">Privacy</h3>
+                <div class="settings-options">
+                    <label class="setting-item">
+                        <span class="setting-label">Location Services</span>
+                        <div class="toggle-switch">
+                            <input type="checkbox"
+                                   id="location-toggle"
+                                   data-settings-location
+                                   name="location"
+                                   checked>
+                            <span class="toggle-slider"></span>
+                        </div>
+                    </label>
                 </div>
             </div>
 
