--- a/weather.html
+++ b/weather.html
@@ -76,89 +76,85 @@
         </article>
     </main>
 
-      <!-- Modified Settings Modal -->
-    <div class="settings-modal" data-settings-modal>
+      <div class="settings-modal" data-settings-modal>
         <div class="settings-content card">
             <h2 class="title-2">Settings</h2>
-            
-            <div class="settings-sections">
-                <!-- Temperature Units - unchanged -->
-                <div class="settings-section">
-                    <h3 class="title-3">Temperature</h3>
-                    <select class="settings-select" data-settings-temp>
-                        <option value="celsius">Celsius (°C)</option>
-                        <option value="fahrenheit">Fahrenheit (°F)</option>
-                        <option value="kelvin">Kelvin (K)</option>
-                    </select>
-                </div>
+            <form data-settings-form> <!- Add this form tag -->
+                <div class="settings-sections">
+                    <div class="settings-section">
+                        <h3 class="title-3">Temperature</h3>
+                        <select class="settings-select" data-settings-temp name="temperature">
+                            <option value="celsius">Celsius (°C)</option>
+                            <option value="fahrenheit">Fahrenheit (°F)</option>
+                            <option value="kelvin">Kelvin (K)</option>
+                        </select>
+                    </div>
 
-                <!-- Wind Speed Units - unchanged -->
-                <div class="settings-section">
-                    <h3 class="title-3">Wind Speed</h3>
-                    <select class="settings-select" data-settings-speed>
-                        <option value="ms">Meters per second (m/s)</option>
-                        <option value="mph">Miles per hour (mph)</option>
-                        <option value="kph">Kilometers per hour (km/h)</option>
-                        <option value="knots">Knots (kts)</option>
-                        <option value="beaufort">Beaufort scale</option>
-                    </select>
-                </div>
+                    <div class="settings-section">
+                        <h3 class="title-3">Wind Speed</h3>
+                        <select class="settings-select" data-settings-speed name="windSpeed">
+                            <option value="ms">Meters per second (m/s)</option>
+                            <option value="mph">Miles per hour (mph)</option>
+                            <option value="kph">Kilometers per hour (km/h)</option>
+                            <option value="knots">Knots (kts)</option>
+                            <option value="beaufort">Beaufort scale</option>
+                        </select>
+                    </div>
 
-                <!-- Pressure Units - unchanged -->
-                <div class="settings-section">
-                    <h3 class="title-3">Pressure</h3>
-                    <select class="settings-select" data-settings-pressure>
-                        <option value="mbar">Millibars (mbar)</option>
-                        <option value="inhg">Inches of Mercury (inHg)</option>
-                        <option value="mmhg">Millimeters of Mercury (mmHg)</option>
-                        <option value="hpa">Hectopascals (hPa)</option>
-                        <option value="kpa">Kilopascals (kPa)</option>
-                    </select>
-                </div>
+                    <div class="settings-section">
+                        <h3 class="title-3">Pressure</h3>
+                        <select class="settings-select" data-settings-pressure name="pressure">
+                            <option value="mbar">Millibars (mbar)</option>
+                            <option value="inhg">Inches of Mercury (inHg)</option>
+                            <option value="mmhg">Millimeters of Mercury (mmHg)</option>
+                            <option value="hpa">Hectopascals (hPa)</option>
+                            <option value="kpa">Kilopascals (kPa)</option>
+                        </select>
+                    </div>
 
-                <!-- Display Settings - 24-hour toggle disabled -->
-                <div class="settings-section">
-                    <h3 class="title-3">Display</h3>
-                    <div class="settings-options">
-                        <label class="setting-item">
-                            <span class="setting-label">24-hour Time</span>
-                            <div class="toggle-switch">
-                                <input type="checkbox" data-settings-time disabled>
-                                <span class="toggle-slider"></span>
-                            </div>
-                        </label>
+                    <div class="settings-section">
+                        <h3 class="title-3">Display</h3>
+                        <div class="settings-options">
+                            <label class="setting-item">
+                                <span class="setting-label">24-hour Time</span>
+                                <div class="toggle-switch">
+                                    <input type="checkbox" data-settings-time name="timeFormat" disabled>
+                                    <span class="toggle-slider"></span>
+                                </div>
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="settings-section">
+                        <h3 class="title-3">Privacy</h3>
+                        <div class="settings-options">
+                            <label class="setting-item">
+                                <span class="setting-label">Location Services</span>
+                                <div class="toggle-switch">
+                                    <input type="checkbox"
+                                           id="location-toggle"
+                                           data-settings-location
+                                           name="location"
+                                           checked>
+                                    <span class="toggle-slider"></span>
+                                </div>
+                            </label>
+                        </div>
                     </div>
                 </div>
 
-                <!-- Modified Privacy Settings -->
-               <div class="settings-section">
-                <h3 class="title-3">Privacy</h3>
-                <div class="settings-options">
-                    <label class="setting-item">
-                        <span class="setting-label">Location Services</span>
-                        <div class="toggle-switch">
-                            <input type="checkbox"
-                                   id="location-toggle"
-                                   data-settings-location
-                                   name="location"
-                                   checked>
-                            <span class="toggle-slider"></span>
-                        </div>
-                    </label>
+                <div class="settings-actions">
+                    <button class="btn-primary settings-save" data-settings-save type="submit"> <!- Add type="submit" -->
+                        <span class="span">Save Changes</span>
+                    </button>
+                    <button class="btn-secondary settings-close" data-settings-close type="button"> <!- Add type="button" -->
+                        <span class="span">Cancel</span>
+                    </button>
                 </div>
-            </div>
-
-            <div class="settings-actions">
-                <button class="btn-primary settings-save" data-settings-save>
-                    <span class="span">Save Changes</span>
-                </button>
-                <button class="btn-secondary settings-close" data-settings-close>
-                    <span class="span">Cancel</span>
-                </button>
-            </div>
+            </form> <!- Add closing form tag -->
         </div>
     </div>
-
+    
     <!-- Error Section -->
     <section class="error-content" data-error-content>
         <h2 class="heading">404</h2>
