--- a/weather.html
+++ b/weather.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="dark">
 <head>
-    <title>weatherio</title>
+    <title>Weather - Bus Army Dude's Profile</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="weatherio">
