--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Countdown Section -->
         <div class="countdown-section">
-            <h2>Countdown to Spring 2025!</h2>
+            <h2>Countdown to Summer 2025!</h2>
             <div class="countdown-container">
                 <div class="countdown-block">
                     <div id="countdown-years" class="flip-clock">
@@ -462,12 +462,12 @@ s0.parentNode.insertBefore(s1,s0);
                     </li>
                     <li>Technology Stack:
                         <ul>
-                            <li>JavaScript (41.7%)</li>
-                            <li>CSS (31.1%)</li>
-                            <li>HTML (27.2%)</li>
+                            <li>JavaScript (44.1%)</li>
+                            <li>CSS (35.6%)</li>
+                            <li>HTML (20.3%)</li>
                         </ul>
                     </li>
-                    <li>Last Updated: March 13th, 2025 9:28:32 AM EST</li>
+                    <li>Last Updated: March 29th, 2025 11:46:00 AM EST</li>
                 </ul>
             </div>
         </div>
@@ -609,7 +609,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $1,067.49</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> September 20, 2024</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> November 08, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> iOS 18.4 (22E5222f)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> iOS 18.4 (22E240)</div>
         <div class="tech-detail"><i class="fas fa-heart"></i><span>Battery Health:</span></div>
         <div class="battery-container">
             <div class="battery-icon">
@@ -617,7 +617,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <div class="battery-percentage">99%</div>
             </div>
         </div>
-        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 210</div>
+        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 212</div>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -631,7 +631,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $853.98</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> September 22, 2023</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> May 17, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> WatchOS 11.4 (22T5234f)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> WatchOS 11.4 (22T250)</div>
         <div class="tech-detail"><i class="fas fa-heart"></i><span>Battery Health:</span></div>
         <div class="battery-container">
             <div class="battery-icon">
@@ -651,7 +651,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $742.29</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> January 17, 2023</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> May 16, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> macOS Sequoia 15.4 Beta (24E5228e)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> macOS Sequoia 15.4 (24E247)</div>
     </div>
 </div>
 
@@ -677,7 +677,7 @@ s0.parentNode.insertBefore(s1,s0);
     <div class="version-info-section">
         <div class="version-header">Version Information</div>
         <div class="version-number">v1.15.0</div>
-        <div class="build-number">2025.3.28</div>
+        <div class="build-number">2025.3.29</div>
         <div class="update-time">2025-01-27 21:29:16</div>
         <div class="os-info" id="os-info">Detecting...</div>
         <div class="device-info" id="device-info">Detecting...</div>
