--- a/weather.html
+++ b/weather.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="weatherio">
-    <meta name="description" content="Explore accurate and real-time weather information for cities around the world with Weatherio. Get current weather conditions, 5-day forecasts, wind speed, sunrise and sunset times, air quality, humidity, and more.">
+    <meta name="description" content="Explore accurate and real-time weather information">
     
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -76,10 +76,10 @@
         </article>
     </main>
 
-      <div class="settings-modal" data-settings-modal>
+    <div class="settings-modal" data-settings-modal>
         <div class="settings-content card">
             <h2 class="title-2">Settings</h2>
-            <form data-settings-form> <!- Add this form tag -->
+            <form data-settings-form>
                 <div class="settings-sections">
                     <div class="settings-section">
                         <h3 class="title-3">Temperature</h3>
@@ -118,7 +118,7 @@
                             <label class="setting-item">
                                 <span class="setting-label">24-hour Time</span>
                                 <div class="toggle-switch">
-                                    <input type="checkbox" data-settings-time name="timeFormat" disabled>
+                                    <input type="checkbox" data-settings-time name="timeFormat">
                                     <span class="toggle-slider"></span>
                                 </div>
                             </label>
@@ -144,14 +144,14 @@
                 </div>
 
                 <div class="settings-actions">
-                    <button class="btn-primary settings-save" data-settings-save type="submit"> <!- Add type="submit" -->
+                    <button class="btn-primary settings-save" data-settings-save type="submit">
                         <span class="span">Save Changes</span>
                     </button>
-                    <button class="btn-secondary settings-close" data-settings-close type="button"> <!- Add type="button" -->
+                    <button class="btn-secondary settings-close" data-settings-close type="button">
                         <span class="span">Cancel</span>
                     </button>
                 </div>
-            </form> <!- Add closing form tag -->
+            </form>
         </div>
     </div>
     
