--- a/weather.html
+++ b/weather.html
@@ -16,6 +16,7 @@
 
     <script type="module" src="assest/js/app.js"></script>
     <script type="module" src="assest/js/route.js"></script>
+    <script type="module" src="assest/js/module.js"></script>
     <script type="module" src="assest/js/settings.js"></script>
 </head>
 <body>
@@ -50,11 +51,6 @@
                     <span class="span">Settings</span>
                 </button>
 
-                <button class="btn-primary has-state" data-settings-btn onclick="window.location.href='index.html';">
-                    <span class="m-icon material-icons">home</span>
-                    <span class="span">Home</span>
-                </button>
-
                 <button class="icon-btn has-state" aria-label="open search" data-search-toggler>
                     <span class="m-icon">search</span>
                 </button>
@@ -76,6 +72,7 @@
         </article>
     </main>
 
+    <!-- Settings Modal -->
     <div class="settings-modal" data-settings-modal>
         <div class="settings-content card">
             <h2 class="title-2">Settings</h2>
@@ -83,7 +80,7 @@
                 <div class="settings-sections">
                     <div class="settings-section">
                         <h3 class="title-3">Temperature</h3>
-                        <select class="settings-select" data-settings-temp name="temperature">
+                        <select class="settings-select" name="temperature" data-settings-temp>
                             <option value="celsius">Celsius (°C)</option>
                             <option value="fahrenheit">Fahrenheit (°F)</option>
                             <option value="kelvin">Kelvin (K)</option>
@@ -92,33 +89,35 @@
 
                     <div class="settings-section">
                         <h3 class="title-3">Wind Speed</h3>
-                        <select class="settings-select" data-settings-speed name="windSpeed">
-                            <option value="ms">Meters per second (m/s)</option>
+                        <select class="settings-select" name="windSpeed" data-settings-speed>
+                            <option value="kmh">Kilometers per hour (km/h)</option>
                             <option value="mph">Miles per hour (mph)</option>
-                            <option value="kph">Kilometers per hour (km/h)</option>
+                            <option value="ms">Meters per second (m/s)</option>
                             <option value="knots">Knots (kts)</option>
-                            <option value="beaufort">Beaufort scale</option>
+                            <option value="beaufort">Beaufort scale (Bft)</option>
                         </select>
                     </div>
 
                     <div class="settings-section">
                         <h3 class="title-3">Pressure</h3>
-                        <select class="settings-select" data-settings-pressure name="pressure">
-                            <option value="mbar">Millibars (mbar)</option>
+                        <select class="settings-select" name="pressure" data-settings-pressure>
+                            <option value="hpa">Hectopascals (hPa)</option>
                             <option value="inhg">Inches of Mercury (inHg)</option>
                             <option value="mmhg">Millimeters of Mercury (mmHg)</option>
-                            <option value="hpa">Hectopascals (hPa)</option>
+                            <option value="mbar">Millibars (mbar)</option>
                             <option value="kpa">Kilopascals (kPa)</option>
                         </select>
                     </div>
 
                     <div class="settings-section">
-                        <h3 class="title-3">Display</h3>
+                        <h3 class="title-3">Time Format</h3>
                         <div class="settings-options">
                             <label class="setting-item">
                                 <span class="setting-label">24-hour Time</span>
                                 <div class="toggle-switch">
-                                    <input type="checkbox" data-settings-time name="timeFormat">
+                                    <input type="checkbox" 
+                                           name="timeFormat" 
+                                           data-settings-time>
                                     <span class="toggle-slider"></span>
                                 </div>
                             </label>
@@ -126,16 +125,14 @@
                     </div>
 
                     <div class="settings-section">
-                        <h3 class="title-3">Privacy</h3>
+                        <h3 class="title-3">Location Services</h3>
                         <div class="settings-options">
                             <label class="setting-item">
-                                <span class="setting-label">Location Services</span>
+                                <span class="setting-label">Enable Location</span>
                                 <div class="toggle-switch">
-                                    <input type="checkbox"
-                                           id="location-toggle"
-                                           data-settings-location
-                                           name="location"
-                                           checked>
+                                    <input type="checkbox" 
+                                           name="location" 
+                                           data-settings-location>
                                     <span class="toggle-slider"></span>
                                 </div>
                             </label>
@@ -144,22 +141,22 @@
                 </div>
 
                 <div class="settings-actions">
-                    <button class="btn-primary settings-save" data-settings-save type="submit">
+                    <button type="submit" class="btn-primary settings-save" data-settings-save>
                         <span class="span">Save Changes</span>
                     </button>
-                    <button class="btn-secondary settings-close" data-settings-close type="button">
+                    <button type="button" class="btn-secondary settings-close" data-settings-close>
                         <span class="span">Cancel</span>
                     </button>
                 </div>
             </form>
         </div>
     </div>
-    
+
     <!-- Error Section -->
     <section class="error-content" data-error-content>
         <h2 class="heading">404</h2>
         <p class="body-1">Page not found!</p>
-        <a href="" class="btn-primary">
+        <a href="#/weather" class="btn-primary">
             <span class="span">Go Home</span>
         </a>
     </section>
