--- a/weather.html
+++ b/weather.html
@@ -51,6 +51,11 @@
                     <span class="span">Settings</span>
                 </button>
 
+                <button class="btn-primary has-state" data-settings-btn onclick="window.location.href='index.html';">
+                    <span class="m-icon material-icons">home</span>
+                    <span class="span">Home</span>
+                </button>
+
                 <button class="icon-btn has-state" aria-label="open search" data-search-toggler>
                     <span class="m-icon">search</span>
                 </button>
